<resources>
    <string name="app_name">Total Finanças</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="username">Eber Fabiano Pacanhela</string>
    <string name="favorecido">Favorecido</string>
    <string name="categoria">Categoria</string>
    <string name="lancamento">Lançamento</string>
    <string name="inicio">Início</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome">Nome</string>
    <string name="ativo">Ativo</string>
    <string name="operacaoNaoInformada">Operação não informada</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="inserir">Inserir</string>
    <string name="intentNaoInformada">Intent não informada</string>
    <string name="entidadeNaoDefinida">Entidade não definida</string>
    <string name="erroAoConfirmar">"Erro ao confirmar.\nDescrição: "</string>
    <string name="inserindo">Inserindo...</string>
    <string name="alterando">Alterando...</string>
    <string name="excluindo">Excluindo...</string>
    <string name="visualizando">Visualizando...</string>
    <string name="visualizar">Visualizar</string>
</resources>
